--- a/locale/en/plzrobots.cfg
+++ b/locale/en/plzrobots.cfg
@@ -1,10 +1,12 @@
 [lulzstopthat]
-robotbbq=Pick up this equipment to restore a __1__
+robotbbq=Pick up this equipment to restore a __1__.
 
 [mod-setting-name]
-folk-stopthat-simply-in-vehicle=Simply disable in vehicle
+folk-stopthat-always=Always disable in vehicle
+folk-stopthat-simply-in-vehicle=Disable while driving
 folk-stopthat-speed=Disable at %
 
 [mod-setting-description]
-folk-stopthat-simply-in-vehicle=Enabling this option simply disables personal roboports while you are in a vehicle, unless the vehicle speed is literally zero.\n\nIf the setting is OFF (default), the mod disables your personal roboports when your vehicle speed exceeds the a percentage of researched worker speed, set below.
+folk-stopthat-simply-in-vehicle=Enabling this option disables personal roboports while you are in a vehicle, except while standing still.\n\nIf the setting is OFF (default), the mod disables your personal roboports when your vehicle speed exceeds the a percentage of researched worker speed, set below.
 folk-stopthat-speed=Disable personal roboports when the vehicle you are in reaches this percent speed relative to your maximum researched worker speed (compared to vanilla bot speed, which start at 0.06).\n\nA value between 130%-180% seems to be the sweet spot for me, depending on vehicle type mostly.\n\nThe personal roboports are enabled again at the result of this percentage + 0.05.\n\nMinimum: 10%\nMaximum: 900%
+folk-stopthat-always=Always disables personal roboports while you are in a vehicle. Even if standing still.
